New implementation of the lobby and game's creation